simple nav on mobile fixed

--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -40,3 +40,12 @@ a :hover {
 .simple-nav a {
     color: white;
 }
+.simple-nav .nav-link { 
+    font-size: 1rem;
+    margin-left:.4rem;
+
+}
+.simple-nav p { 
+    margin-bottom: .4rem;
+    margin-left:.4rem;
+}
